# recruitment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
compose/db/: readme.md
compose/db/conf/: master.cnf  slave.cnf
compose/db/env/: .env
compose/db/init/: Online_Shop.sql  init.sql
compose/nginx/: gen_cert.sh  nginx.conf  nginx_bak.conf  nginx_demo.conf  readme.md
compose/nginx/common/: gen_cert.sh
compose/nginx/option1_dajianggou/: Dockerfile  nginx.conf  readme.md
compose/redis/: readme.md  redis.conf  test.py
nginx/: nginx.conf
src/recruitment/: db.sqlite3  db2.db
src/recruitment/celery/: tasks.py  test.py
src/recruitment/interview/: admin.py  apps.py  candidate_field.py  dingtalk.py  models.py  tasks.py  tests.py
src/recruitment/interview/management/commandas/: import_candidates.py
src/recruitment/interview/management/commands/: import_candidates.py
src/recruitment/jobs/: admin.py  apps.py  forms.py  models.py  signal_processor.py  urls.py  views.py
src/recruitment/jobs/testcase/: test_views.py
src/recruitment/recruitment/: __init__.py  asgi.py  celery.py  settings.py  urls.py
src/recruitment/running/: admin.py  apps.py  models.py
src/recruitment/settings/: __init__.py  base.py  router.py
src/recruitment/templates/: base.html  resume_form.html
src/recruitment/templates/jobs/: joblist.html
tests/: test_demo.py
